--- a/style/main.css
+++ b/style/main.css
@@ -19,7 +19,7 @@ body {
 
 :root {
     --primary-color: #6799fa;
-    --secondary-color: #2c3e50;
+    --secondary-color: rgb(28, 36, 74);
 }
 
 ul {
@@ -104,7 +104,7 @@ td {
     border: 1px solid #ddd;
     /* 셀 테두리 */
     padding: 8px;
-    overflow-x:auto;
+    overflow-x: auto;
 }
 
 th {
@@ -136,27 +136,8 @@ th {
     float: right;
 }
 
-@media screen and (min-width: 360px) {
-
-    #wrapper {
-        padding: 50px 20px 120px;
-    }
-
-}
-
-@media screen and (max-width: 360px) {
-
-    #wrapper {
-        padding: 105px 20px 120px;
-    }
-}
-
-@media screen and (max-width: 200px) {
-
-    #wrapper {
-        padding: 140px 20px 120px;
-    }
-
+#wrapper {
+    padding: 0px 20px 120px;
 }
 
 #process-button {
@@ -248,4 +229,3 @@ th {
     display: flex;
     flex-direction: column;
 }
-
