분석 도구 시스템 도입

--- a/style/slider.css
+++ b/style/slider.css
@@ -1,6 +1,6 @@
 .slider {
-    position: fixed;
-    bottom: 0;
+    position: sticky;
+    bottom: 20px;
     left: 0;
     right: 0;
     z-index: 3;
