다국어 지원

--- a/league/template/visualize-personal.html
+++ b/league/template/visualize-personal.html
@@ -1,21 +1,32 @@
-<h1>✨ 개인 확장 가치</h1>
+<h1>✨ 
+    <e-text key="label-personal-extended-value">개인 확장 가치</e-text>
+</h1>
 <hr>
 <div>
-    <button class="open-batter-personal">개인 타격 기록 설정</button>
+    <button class="open-batter-personal">
+        <e-text key="btn-input-batter-personal">개인 타격 기록 설정
+        </e-text>
+    </button>
     <hr>
     <h1 class="personal-woba">가중 출루율</h1>
     <hr>
     <h1 class="personal-wraa">wraa</h1>
     <h1 class="personal-wraa-custom">wraa(커스텀)</h1>
     <p style="font-size: 0.9em; color: #666;">
-        ※ wRAA는 모델 기반의 wOBA(아웃 대비 기대 득점)를 바탕으로, wRAA(커스텀)은 모델 기반 기대 득점 변화를 바탕으로 계산하여 약간의 오차가 있습니다.
+        ※ <e-text key="label-personal-extended-woba-desc">
+            wRAA는 모델 기반의 wOBA(아웃 대비 기대 득점)를 바탕으로, wRAA(커스텀)은 모델 기반 기대 득점 변화를 바탕으로 계산하여 약간의 오차가 있습니다.
+        </e-text>
     </p>
     <hr>
     <h1 class="personal-wrcplus">wRC+</h1>
     <h1 class="personal-wrcplus-custom">wRC+(커스텀)</h1>
     <p style="font-size: 0.9em; color: #666;">
-        ※ wRC+, wRC+(커스텀)은 파크팩터를 반영하지 않은 값입니다.
+        ※ <e-text key="label-personal-extended-wrc+-desc-1">
+            wRC+, wRC+(커스텀)은 파크팩터를 반영하지 않은 값입니다.
+        </e-text>
         <br>
-        ※ wRC+는 wRAA를 기반으로, wRC+(커스텀)은 wRAA(커스텀)을 기반으로 계산하여 약간의 오차가 있습니다.
+        ※ <e-text key="label-personal-extended-wrc+-desc-2">
+            wRC+는 wRAA를 기반으로, wRC+(커스텀)은 wRAA(커스텀)을 기반으로 계산하여 약간의 오차가 있습니다.
+        </e-text>
     </p>
 </div>
