--- a/league/template/visualize-run-value.html
+++ b/league/template/visualize-run-value.html
@@ -1,4 +1,6 @@
-<h1>💎 리그 타구 가치</h1>
+<h1>💎 
+    <e-text key="label-league-batted-ball-value">리그 타구 가치</e-text>
+</h1>
 <hr>
 <div class="run-value">
 </div>
