--- a/line-up/template/batter-new.html
+++ b/line-up/template/batter-new.html
@@ -10,7 +10,10 @@
             align-items: center;
         ">
             <button class="edit-player">
-                편집하기
+                <e-text key="btn-edit-batter">
+                    편집하기
+                </e-text>
+
             </button>
         </div>
     </div>
