--- a/line-up/template/visualizer-RE.html
+++ b/line-up/template/visualizer-RE.html
@@ -1,17 +1,55 @@
 <h1>
     🎯
     <select class="start-num" style="font-size:20px;display:inline;">
-        <option value="0">1</option>
-        <option value="1">2</option>
-        <option value="2">3</option>
-        <option value="3">4</option>
-        <option value="4">5</option>
-        <option value="5">6</option>
-        <option value="6">7</option>
-        <option value="7">8</option>
-        <option value="8">9</option>
+        <option value="0">
+            <e-text key="label-batter-num-1">
+                1번 타자
+            </e-text>
+        </option>
+        <option value="1">
+            <e-text key="label-batter-num-2">
+                2번 타자
+            </e-text>
+        </option>
+        <option value="2">
+            <e-text key="label-batter-num-3">
+                3번 타자
+            </e-text>
+        </option>
+        <option value="3">
+            <e-text key="label-batter-num-4">
+                4번 타자
+            </e-text>
+        </option>
+        <option value="4">
+            <e-text key="label-batter-num-5">
+                5번 타자
+            </e-text>
+        </option>
+        <option value="5">
+            <e-text key="label-batter-num-6">
+                6번 타자
+            </e-text>
+        </option>
+        <option value="6">
+            <e-text key="label-batter-num-7">
+                7번 타자
+            </e-text>
+        </option>
+        <option value="7">
+            <e-text key="label-batter-num-8">
+                8번 타자
+            </e-text>
+        </option>
+        <option value="8">
+            <e-text key="label-batter-num-9">
+                9번 타자
+            </e-text>
+        </option>
     </select>
-    번 타자 시점 상황별 기대 득점
+    <e-text key="label-re24-for">
+        의 RE24
+    </e-text>
 </h1>
 <hr>
 <div class="result-re">
