--- a/line-up/template/visualizer-leadoff.html
+++ b/line-up/template/visualizer-leadoff.html
@@ -1,5 +1,8 @@
 <h1>
-    📊 타자별 이닝 선두타자 분석
+    📊 
+    <e-text key="label-leadoff-hitters-by-inning">
+        선두타자 분석
+    </e-text>
 </h1>
 <hr>
 <div class="result-leadoff">
