--- a/template/batter-input.html
+++ b/template/batter-input.html
@@ -1,109 +1,96 @@
 <div class="input-form">
     <div class="input-group">
-        타석:
+        <e-text key="input-batter-pa">타석:</e-text>
         <b class="input-batter-pa"></b>
     </div>
     <div class="input-group">
-        타수:
+        <e-text key="input-batter-ab">타수:</e-text>
         <b class="input-batter-ab"></b>
     </div>
     <div class="input-group">
-        안타:
+        <e-text key="input-batter-hit">안타:</e-text>
         <b class="input-batter-hit"></b>
     </div>
     <div class="input-group">
-        출루:
+        <e-text key="input-batter-ob">출루:</e-text>
         <b class="input-batter-ob"></b>
     </div>
     <div class="input-group">
-        장타수:
+        <e-text key="input-batter-tb">장타수:</e-text>
         <b class="input-batter-tb"></b>
     </div>
 </div>
 <div class="input-form">
     <div class="input-group">
-        타율:
+        <e-text key="input-batter-ba">타율</e-text>
         <b class="input-batter-ba"></b>
     </div>
     <div class="input-group">
-        출루율:
+        <e-text key="input-batter-oba">출루율</e-text>
         <b class="input-batter-oba"></b>
     </div>
     <div class="input-group">
-        장타율:
+        <e-text key="input-batter-slg">장타율</e-text>
         <b class="input-batter-slg"></b>
     </div>
     <div class="input-group">
-        OPS:
+        <e-text>OPS: </e-text>
         <b class="input-batter-ops"></b>
     </div>
 </div>
 <hr>
 <div class="input-form">
     <div class="input-group">
-        <label>
-            볼넷
-        </label>
+        <e-text key="input-batter-bb">볼넷</e-text>
         <input type="number" class="input-batter-bb" value="111" step="1" min="0">
     </div>
     <div class="input-group">
-        <label>
-            단타(1B)
-        </label>
+        <e-text key="input-batter-1B">단타(1B)</e-text>
         <input type="number" class="input-batter-1B" value="65" step="1" min="0">
     </div>
     <div class="input-group">
-        <label>
-            2루타(2B)
-        </label>
-        <input type="number" class="input-batter-2B" value="23" step="1" min="0">
+        <e-text key="input-batter-2B">
+            2루타(2B)</e-text>
+            <input type="number" class="input-batter-2B" value="23" step="1" min="0">
     </div>
     <div class="input-group">
-        <label>
-            3루타(3B)
-        </label>
-        <input type="number" class="input-batter-3B" value="0" step="1" min="0">
+        <e-text key="input-batter-3B">
+            3루타(3B)</e-text>
+            <input type="number" class="input-batter-3B" value="0" step="1" min="0">
     </div>
     <div class="input-group">
-        <label>
-            홈런(HR)
-        </label>
-        <input type="number" class="input-batter-hr" value="56" step="1" min="0">
+        <e-text key="input-batter-hr">
+            홈런(HR)</e-text>
+            <input type="number" class="input-batter-hr" value="56" step="1" min="0">
     </div>
 </div>
 <hr>
 <div class="input-form">
     <div class="input-group">
-        <label>
-            땅볼 아웃(GO)
-        </label>
+        <e-text key="input-batter-go">
+        땅볼 아웃(GO)</e-text>
         <input type="number" class="input-batter-go" value="117" step="1" min="0">
     </div>
     <div class="input-group">
-        <label>
-            뜬공 아웃(FO)
-        </label>
+        <e-text key="input-batter-fo">
+        뜬공 아웃(FO)</e-text>
         <input type="number" class="input-batter-fo" value="135" step="1" min="0">
     </div>
     <div class="input-group">
-        <label>
-            삼진(SO)
-        </label>
+        <e-text key="input-batter-so">
+        삼진(SO)</e-text>
         <input type="number" class="input-batter-so" value="89" step="1" min="0">
     </div>
     <div class="input-group">
-        <label>
-            희생번트(SAC)
-        </label>
+        <e-text key="input-batter-sac">희생번트(SAC)</e-text>
         <input type="number" class="input-batter-sac" value="0" step="1" min="0">
     </div>
     <div class="input-group">
-        <label>
-            희생플라이(SF)
-        </label>
+        <e-text key="input-batter-sf">희생플라이(SF)</e-text>
         <input type="number" class="input-batter-sf" value="6" step="1" min="0">
     </div>
     <p style="font-size: 0.9em; color: #666;">
-        ※ 희생번트, 희생플라이는 기대 득점에 반영되지 않지만, 누적 스탯으로 산출되어 예시로 보여지는 타율, 출루율, 장타율을 정확하게 표시하기 위해 사용됩니다.
+        ※ 
+        <e-text key="input-batter-desc">희생번트, 희생플라이는 기대 득점에 반영되지 않지만, 누적 스탯으로 산출되어 예시로 보여지는 타율, 출루율, 장타율을 정확하게 표시하기 위해 사용됩니다.</e-text>
     </p>
 </div>
