--- a/league/template/visualize-league.html
+++ b/league/template/visualize-league.html
@@ -1,11 +1,18 @@
-<h1>✨ 리그 확장 가치</h1>
+<h1>✨ 
+    <e-text key="label-league-extended-value">리그 확장 가치</e-text>
+</h1>
 <hr>
 <div>
     <h1 class="league-woba-scale"></h1>
     <h1 class="league-p-pa"></h1>
     <p style="font-size: 0.9em; color: #666;">
-        ※ wOBA Scale은 리그 평균 wOBA를 0.330으로 계산되도록 조정하는 값입니다.
+        ※ 
+        <e-text key="label-league-extended-value-desc-1">
+            wOBA Scale은 리그 평균 wOBA를 0.330으로 계산되도록 조정하는 값입니다.
+        </e-text>
         <br>
-        ※ R/PA는 리그 전체 득점을 리그 전체 타석수로 나눈 값입니다. 계산에 사용된 리그 득점은 RE24 기반 추정값입니다.
+        ※ <e-text key="label-league-extended-value-desc-2">
+            R/PA는 리그 전체 득점을 리그 전체 타석수로 나눈 값입니다. 계산에 사용된 리그 득점은 RE24 기반 추정값입니다.
+        </e-text>
     </p>
 </div>
