--- a/template/runner-input.html
+++ b/template/runner-input.html
@@ -1,8 +1,10 @@
 <div>
-    <h3>폭투</h3>
+    <h3>
+        <e-text key="input-runner-passed-ball">폭투</e-text>
+    </h3>
     <div class="input-form">
         <div class="input-group">
-            발생률
+            <e-text key="input-runner-occurred">발생율</e-text>
             <input type="number" class="input_runner_passedball" value="0.03" step="0.01" min="0" max="1">
         </div>
     </div>
