--- a/league/template/visualizer-league.html
+++ b/league/template/visualizer-league.html
@@ -5,6 +5,7 @@
 <div>
     <h1 class="league-woba-scale"></h1>
     <h1 class="league-p-pa"></h1>
+    <h1 class="league-p-pa-custom"></h1>
     <p style="font-size: 0.9em; color: #666;">
         ※ 
         <e-text key="label-league-extended-value-desc-1">
@@ -12,7 +13,11 @@
         </e-text>
         <br>
         ※ <e-text key="label-league-extended-value-desc-2">
-            R/PA는 리그 전체 득점을 리그 전체 타석수로 나눈 값입니다. 계산에 사용된 리그 득점은 RE24 기반 추정값입니다.
+            R/PA는 엔진이 계산한 기대 득점을 실제 리그 타격 통계 기반의 이닝당 타석수로 나눈 값입니다.
+        </e-text>
+        <br>
+        ※ <e-text key="label-league-extended-value-desc-3">
+            R/PA(Custom)은 엔진이 계산한 기대 득점을 엔진의 상태 전이 모델이 예측한 이닝당 타석수로 나눈 값입니다.
         </e-text>
     </p>
 </div>
